# noctra

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Makefile  README.md  compose.cuda.yaml  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
deploy/: com.noctra.plist
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  theme.ts  useQueueState.ts
frontend/src/components/: AppHeader.tsx  CommandBar.tsx  EnqueueForm.tsx  HistoryPanel.tsx  JobCard.tsx  JobList.tsx  JobRow.tsx  QueuePanel.tsx  QueueView.tsx  SettingsPanel.tsx  StatsBar.tsx  StatsRow.tsx
scripts/: release.py
src/noctra/: __init__.py  __main__.py  cli.py  config.py  domain.py  engine.py  logging_setup.py  paths.py  persistence.py  queue_store.py  server.py  worker.py
src/noctra/api/: __init__.py  app.py  routes.py  schemas.py
tests/: conftest.py  test_api.py  test_config.py  test_domain.py  test_engine.py  test_paths.py  test_persistence.py  test_queue_store.py  test_worker.py
web/: app.js  index.html  styles.css
