[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noctra"
version = "0.3.0"
description = "Local sequential audio transcription queue with a minimal web UI."
requires-python = ">=3.12"
dependencies = [
  "faster-whisper",
  "tqdm",
  "pydantic-settings>=2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
]

[project.scripts]
noctra = "noctra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["noctra"]
omit = ["src/noctra/cli.py", "src/noctra/__main__.py"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["noctra"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
